# warehouse-management-system-be

./: .env.example  Cargo.toml  README.md  TRANSACTION_FLOW.md
migrations/: 20260307065725_create_users_table.up.sql  20260307072310_create_roles_table.down.sql  20260307072310_create_roles_table.up.sql  20260307072353_create_user_roles_table.down.sql  20260307072353_create_user_roles_table.up.sql  20260307074329_create_warehouses_table.down.sql  20260307074329_create_warehouses_table.up.sql  20260331043242_create_user_warehouses_table.down.sql  20260331043242_create_user_warehouses_table.up.sql  20260331043405_create_racks_table.down.sql  20260331043405_create_racks_table.up.sql  20260331043502_create_categories_table.down.sql  20260331043502_create_categories_table.up.sql  20260331043536_create_products_table.down.sql  20260331043536_create_products_table.up.sql  20260331043633_create_inventories_table.down.sql  20260331043633_create_inventories_table.up.sql  20260331043712_create_inventory_racks_table.down.sql  20260331043712_create_inventory_racks_table.up.sql  20260331043752_create_suppliers_table.down.sql  20260331043752_create_suppliers_table.up.sql  20260331043841_create_customers_table.down.sql  20260331043841_create_customers_table.up.sql  20260331043929_create_goods_receipts_table.down.sql  20260331043929_create_goods_receipts_table.up.sql  20260331044011_create_goods_receipt_items_table.down.sql  20260331044011_create_goods_receipt_items_table.up.sql  20260331044046_create_shipments_table.down.sql  20260331044046_create_shipments_table.up.sql  20260331044133_create_shipment_items_table.down.sql  20260331044133_create_shipment_items_table.up.sql  20260331044226_create_transfers_table.down.sql  20260331044226_create_transfers_table.up.sql  20260331044300_create_transfer_items_table.down.sql  20260331044300_create_transfer_items_table.up.sql  20260331044342_create_stock_movements_table.down.sql  20260331044342_create_stock_movements_table.up.sql  20260403200329_create_refresh_tokens_table.down.sql  20260403200329_create_refresh_tokens_table.up.sql  20260611111125_create_column_for_full_text_search.down.sql  (+1 more)
scripts/: reset_seeders.sh  run_seeders.sh
seeders/: 001_insert_default_roles.sql  002_insert_sample_users.sql  002_insert_users_admin.sql
src/: app.rs  constants.rs  dtos.rs  errors.rs  handlers.rs  infrastructure.rs  lib.rs  main.rs  middlewares.rs  models.rs  repositories.rs  response.rs  routes.rs  services.rs  state.rs  utils.rs
src/dtos/: auth_dto.rs  rack_dto.rs  role_dto.rs  user_dto.rs  user_role_dto.rs  user_warehouse_dto.rs  warehouse_dto.rs
src/errors/: app_error.rs  error_codes.rs
src/handlers/: auth.rs  auth_handler.rs  health.rs  health_handler.rs  role_handler.rs  upload_handler.rs  user_handler.rs  user_role_handler.rs  user_warehouse_handler.rs  warehouse_handler.rs
src/infrastructure/: cloudinary.rs  config.rs  db.rs  logger.rs  redis.rs  security.rs
src/middlewares/: auth_middleware.rs  logging_middleware.rs  request_id_middleware.rs  require_jwt.rs
src/models/: params.rs  racks.rs  roles.rs  user_roles.rs  user_warehouses.rs  users.rs  warehouses.rs
src/models/params/: rack_params.rs
src/repositories/: auth_repository.rs  rack_repository.rs  roles_repository.rs  user_repository.rs  user_role_repository.rs  user_warehouse_repository.rs  warehouse_repository.rs
src/response/: api_response.rs  pagination.rs
src/routes/: auth_routes.rs  health_routes.rs  role_routes.rs  user_role_routes.rs  user_routes.rs  user_warehouse_routes.rs  warehouse_routes.rs
src/services/: auth_service.rs  container.rs  rack_service.rs  role_service.rs  roles_service.rs  user_role_service.rs  user_service.rs  user_warehouse_service.rs  warehouse_service.rs
src/utils/: crypto.rs  jwt.rs  paseto.rs  token.rs
src/validators/: common.rs
tests/: auth_test.rs  warehouse_test.rs
tests/common/: mod.rs
