[package]
name = "warehouse-management-system-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate"] }

# Auth / Security
argon2 = "0.5"
jsonwebtoken = "9" 

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.18", features = ["derive"] } 

# Error Handling
thiserror = "1"  
anyhow = "1"

# Tracing / Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File Upload
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Utilities
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
regex = "1"
