[package]
name = "warehouse-management-system-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "json"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }
 
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
deadpool-postgres = { version = "0.13", features = ["serde"] }

# Redis (cache)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "cluster-async"]}
deadpool-redis ={ version = "0.16", features = ["serde"]}
 
# Auth / Security
argon2 = {version = "0.5", features = ["std"]}
pasetors = { version = "0.7", features = ["v4", "serde"] }
# jsonwebtoken = "9"
 
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
 
# Validation
validator = { version = "0.18", features = ["derive"] }
 
# Error handling
thiserror = "1"
anyhow = "1"
 
# Tracing / Logging / Observasibility
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
lazy_static = "1.5"
 
# Http Request
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Rate Limiting
governor = {version = "0.7", features = ["dashmap"]}
dashmap = "6"
 
# Utilities
uuid = { version = "1", features = ["v7", "serde", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
time = {version = "0.3", features = ["serde"]}
dotenvy = "0.15"
once_cell = "1"
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
rand = {version = "0.8", features = ["getrandom"]}
hex = "0.4"
regex = "1"
 
[dev-dependencies]
# Mocking for unit tests
mockall = "0.13"
